devscripts (2.10.17) UNRELEASED; urgency=low

  [ Adam D. Barratt ]
  * checkbashisms: Fix a false positive in the $(( test (Closes: #465364)
  * Debbugs.pm: Add status()
  * tagpending: Rewrite in perl using Debbugs.pm
  * debcheckout:
    + Handle spaces between -d and the root for cvs repositories
      (Closes: #465849)
    + Fix a warning about uninitialised values when a module name is not
      supplied for a cvs repository
  * uscan: Add support for repacking .zip archives, based on a patch
    from Antonio Terceiro (Closes: #456587)
  * Packaging changes:
    + README: Update description of tagpending
    + debian/control:
      - Add unzip(1) to Suggests for uscan's zip repacking
      - Update description of tagpending
  * debcommit: Use "git diff" instead of "git-diff" (Closes: #466158)
  * dget: Correctly handle the processing of a file that we've already
    retrieved (Closes: #445546)
  * wnpp-alert: Note in the manpage that the results are source package
    based

  [ Christoph Berg ]
  * dget:
    + Make unpacking downloaded source packages the default, use -d for the
      old behaviour.
    + Check signature of source packages using dscverify, use -u to disable.
      (Closes: #434521)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 19 Feb 2008 06:53:31 +0000

devscripts (2.10.16) unstable; urgency=low

  The "storm before the calm" release

  * checkbashisms:
    + Correct the $(<) check to not flag $(<foo grep bar) (Closes: #464522)
    + Tighten the $(( / (( regex
    + Modify the ". foo bar" check to allow ". `foo bar`" (Closes: #464984)
    + Ensure that an explanation is provided for the ". foo bar" check
    + Fix the "shell wrapper" regex to allow a space after ; and before exec
      (Closes: #464976)
    + Add posh to the list of supported interpreters. Thanks to Raphael
      Geissert.
    + Warn about use of >& and <& redirecting to a file (POSIX specifies